--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>Grammify!</h2>
       <p>
         Check your English text for grammar, spelling, and punctuation errors with
-        Grammer check.
+        Grammify!.
       </p>
 
       <textarea
